# Automated_differenciation

./: CMakeLists.txt  Makefile  ReadMe.txt  doxConfig  libs2.h  main.cpp  script.sh  source.cpp  test1.cpp  tests.cpp
libraries/: CMakeLists.txt  diffTree.cpp  diffTree.h  libs.h  libs2.h  source.cpp  values.cpp  values.h
